# OHG-Bot

./: .gitignore  .gitmodules  Cargo.toml
core/: Cargo.toml
core/src/: commands.rs  lib.rs  models.rs  util.rs
core/src/commands/: roles.rs  rpg_disabled.rs  rpg_enabled.rs  threads.rs
core/src/models/: shim.rs
emoji/: Cargo.toml  notes.txt
emoji/src/: lib.rs
headers/: Cargo.toml
headers/src/: lazy_db.rs  lib.rs
src/: commands.rs  lib.rs  models.rs  util.rs
src/commands/: roles.rs
src/models/: shim.rs
