[package]
name = "ohg-bot-lib"
version = "0.1.0"
authors = ["Wolvereness <wesley.d.wolfe+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "*"
tokio = { version = "*", features = [ "macros" ] }
wither = "0.9.0-alpha.2"
wither_derive = "0.9.0-alpha.2"
serde = "*"
serde_derive = "*"
futures = "*"
byteorder = "*"
