[package]
name = "ohg-bot-core"
version = "0.2.0"
authors = ["Wolvereness <wesley.d.wolfe+git@gmail.com>"]
edition = "2021"

[dependencies]
serenity = { version = "0.11.5", features = ["unstable_discord_api"] }
tokio = { version = "1.21.2", features = ["full"] }
wither = "0.9.0"
wither_derive = "0.9.0"
serde = "1.0.147"
serde_derive = "1.0.147"
futures = "0.3.25"
byteorder = "1.4.3"
