[package]
name = "ohg-bot-headers"
version = "0.1.0"
authors = ["Wolvereness <wesley.d.wolfe+git@gmail.com>"]
edition = "2018"

[dependencies.serenity]
version = "*"
git = "git://github.com/serenity-rs/serenity"
rev = "e5218498c1d2c026084d7f7efd6788571bc6170e"

[dependencies]
wither = "0.9.0-alpha.2"
typetag = "*"
async-trait = "*"
arrayvec = "*"
